--- a/global.css
+++ b/global.css
@@ -5,3 +5,14 @@ body {
     color: white;
     width: 100%;
 }
+
+footer {
+    display: flex;
+    justify-content: center;
+    padding: 5% 0 0;
+}
+footer p {
+    font-family: "Source Serif Pro";
+    font-size: 150%;
+    color: #8e0101;
+}
