--- a/pages/about/about.css
+++ b/pages/about/about.css
@@ -1,14 +1,14 @@
 header {
     width: 100%;
     background-color: #8e0101;
-    position: sticky;
+    position: fixed;
     top: 0;
+    left: 0;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
 }
 
 
 header nav {
-    width: 100%;
     display: flex;
     justify-content: space-around;
     padding: 2%;
@@ -110,6 +110,7 @@ header nav #direita.active {
 .center {
     width: 80%;
     margin: auto;
+    margin-top: 15vh;
     padding-bottom: 2%;
 }
 
