--- a/pages/bartender/bartender.css
+++ b/pages/bartender/bartender.css
@@ -2,8 +2,10 @@ header {
     width: 100%;
     position: fixed;
     top: 0;
+    left: 0;
     background-color: #8e0101;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+    z-index: 100;
 }
 
 
@@ -56,6 +58,10 @@ header nav #direita button a:hover {
 
 
 @media (max-width: 700px) {
+    main{
+        flex-direction: column;
+        text-align: center;
+    }
     body {
         overflow-x: hidden;
     }
@@ -108,5 +114,53 @@ header nav #direita.active {
 }
 
 main {
+    width: 80%;
+    margin: auto;
     margin-top: 15vh;
+    background-color: transparent;
+    border: 3px solid #8e0101;
+    display: flex;
+    padding: 5%;
+    gap: 10%;
+    border-radius: 30px;
+    filter: drop-shadow(10px 5px 10px black);
+}
+
+main h1 {
+    font-family: 'Ewert';
+    font-size: 200%;
+    text-align: center;
+    padding-bottom: 5%;
+    margin: 0;
+}
+
+main p {
+    font-family: 'Source Serif Pro';
+    font-size: 150%;
+    text-align: left;
+}
+
+main button {
+    font-family: "Source Serif Pro";    
+    font-size: 125%;
+    background-color: #8e0101; 
+    border: 0;
+    border-radius: 50px;
+    padding: 4% 0;
+    width: 100%;
+    cursor: pointer;
+    margin: 10% 0;
+}
+
+main button a {
+    text-decoration: none;
+    color: white;
+}
+main button:hover {
+    background-color: white;
+    transition: 0.5s;
+}
+main button:hover a {
+    color: #8e0101;
+    transition: 0.5s;
 }
